--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>Homework 5</title>
+        <title>Homework 6</title>
         <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Raleway:wght@800&family=Roboto:wght@400;500;700;900&display=swap" />
         <link rel="stylesheet" href="css/styles.css" />
     </head>
@@ -49,6 +49,23 @@
                                 <use href="./images/icons.svg#close"></use>
                             </svg>
                         </button>
+
+                        <h2>Leave your contacts and we will call you back</h2>
+
+                        <form class="service-form">
+                            <label for="name" class="service-label">
+                                <span class="input-label">Name</span>
+                                <input type="text" class="service-input" />
+                                <svg width="18" height="18" class="service-icon">
+                                    <use href="./images/icons.svg#person"></use>
+                                </svg>
+                            </label>
+
+                            <label for="comment" class="service-label">
+                                <span class="input-label">Comment</span>
+                                <textarea class="service-input-textarea" rows="8" placeholder="Text input"></textarea>
+                            </label>
+                        </form>
                     </div>
                 </div>
             </section>
@@ -187,12 +204,24 @@
         </main>
 
         <footer class="bg-dark footer">
-            <a href="#" class="logo link"> <span class="logo-web">Web</span><span class="logo-studio-footer">studio</span> </a>
-            <p class="footer-text">
-                Increase the flow of customers and <br />
-                sales for your business with digital<br />
-                marketing & growth solutions.
-            </p>
+            <div>
+                <a href="#" class="logo link"> <span class="logo-web">Web</span><span class="logo-studio-footer">studio</span> </a>
+                <p class="footer-text">
+                    Increase the flow of customers and <br />
+                    sales for your business with digital<br />
+                    marketing & growth solutions.
+                </p>
+            </div>
+            <div>
+                <!-- social media icons -->
+            </div>
+            <div>
+                <p>Subscribe</p>
+                <form>
+                    <input type="text" placeholder="Email" />
+                    <button>Subscribe</button>
+                </form>
+            </div>
         </footer>
         <script type="text/javascript" src="./js/modal.js"></script>
     </body>
