--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                             </svg>
                         </button>
 
-                        <h2>Leave your contacts and we will call you back</h2>
+                        <h4>Leave your contacts and we will call you back</h4>
 
                         <form class="service-form">
                             <label for="name" class="service-label">
@@ -61,10 +61,35 @@
                                 </svg>
                             </label>
 
+                            <label for="phone" class="service-label">
+                                <span class="input-label">Phone</span>
+                                <input type="number" class="service-input" />
+                                <svg width="18" height="18" class="service-icon">
+                                    <use href="./images/icons.svg#phone"></use>
+                                </svg>
+                            </label>
+
+                            <label for="phone" class="service-label">
+                                <span class="input-label">Email</span>
+                                <input type="email" class="service-input" />
+                                <svg width="18" height="18" class="service-icon">
+                                    <use href="./images/icons.svg#email"></use>
+                                </svg>
+                            </label>
+
                             <label for="comment" class="service-label">
                                 <span class="input-label">Comment</span>
                                 <textarea class="service-input-textarea" rows="8" placeholder="Text input"></textarea>
                             </label>
+
+                            <label for="agree" class="service-agree">
+                                <input type="checkbox" name="agree" value="agree" class="agree-checkbox" />
+                                <svg width="16" height="16" class="agree-check-icon">
+                                    <use href="./images/icons.svg#checkbox"></use>
+                                </svg>
+                                <span class="agree-text">I accept the terms and conditions of the <a href="#">Privacy Policy</a></span>
+                            </label>
+                            <button class="modal-send">Send</button>
                         </form>
                     </div>
                 </div>
@@ -203,7 +228,7 @@
             </section>
         </main>
 
-        <footer class="bg-dark footer">
+        <footer class="bg-dark footer d-flex">
             <div>
                 <a href="#" class="logo link"> <span class="logo-web">Web</span><span class="logo-studio-footer">studio</span> </a>
                 <p class="footer-text">
@@ -212,14 +237,41 @@
                     marketing & growth solutions.
                 </p>
             </div>
-            <div>
-                <!-- social media icons -->
+            <div class="footer-social">
+                <p class="footer-social-text">Social Media</p>
+                <div class="d-flex">
+                    <a class="team-socials-icon">
+                        <svg width="16" height="16">
+                            <use href="./images/icons.svg#instagram-2"></use>
+                        </svg>
+                    </a>
+                    <a class="team-socials-icon">
+                        <svg width="16" height="16">
+                            <use href="./images/icons.svg#twitter-1"></use>
+                        </svg>
+                    </a>
+                    <a class="team-socials-icon">
+                        <svg width="16" height="16">
+                            <use href="./images/icons.svg#linkedin-1"></use>
+                        </svg>
+                    </a>
+                    <a class="team-socials-icon">
+                        <svg width="16" height="16">
+                            <use href="./images/icons.svg#facebook"></use>
+                        </svg>
+                    </a>
+                </div>
             </div>
-            <div>
-                <p>Subscribe</p>
+            <div class="footer-sub">
+                <p class="footer-subscribe-text">Subscribe</p>
                 <form>
-                    <input type="text" placeholder="Email" />
-                    <button>Subscribe</button>
+                    <input type="text" placeholder="Email" class="input-sub" />
+                    <button class="btn-sub">
+                        Subscribe
+                        <svg width="24" height="24">
+                            <use href="./images/icons.svg#send"></use>
+                        </svg>
+                    </button>
                 </form>
             </div>
         </footer>
