--- a/portfolio.html
+++ b/portfolio.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>Homework 4</title>
+        <title>Homework 6</title>
         <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Raleway:wght@800&family=Roboto:wght@400;500;700;900&display=swap" />
         <link rel="stylesheet" href="css/styles.css" />
     </head>
@@ -116,14 +116,47 @@
                 </div>
             </section>
         </main>
-
-        <footer class="bg-dark">
-            <a href="#" class="logo link"> <span class="logo-web">Web</span><span class="logo-studio-footer">studio</span> </a>
-            <p class="footer-text">
-                Increase the flow of customers and <br />
-                sales for your business with digital<br />
-                marketing & growth solutions.
-            </p>
+        <footer class="bg-dark footer d-flex">
+            <div>
+                <a href="#" class="logo link"> <span class="logo-web">Web</span><span class="logo-studio-footer">studio</span> </a>
+                <p class="footer-text">
+                    Increase the flow of customers and <br />
+                    sales for your business with digital<br />
+                    marketing & growth solutions.
+                </p>
+            </div>
+            <div class="footer-social">
+                <p class="footer-social-text">Social Media</p>
+                <div class="d-flex">
+                    <a class="team-socials-icon">
+                        <svg width="16" height="16">
+                            <use href="./images/icons.svg#instagram-2"></use>
+                        </svg>
+                    </a>
+                    <a class="team-socials-icon">
+                        <svg width="16" height="16">
+                            <use href="./images/icons.svg#twitter-1"></use>
+                        </svg>
+                    </a>
+                    <a class="team-socials-icon">
+                        <svg width="16" height="16">
+                            <use href="./images/icons.svg#linkedin-1"></use>
+                        </svg>
+                    </a>
+                    <a class="team-socials-icon">
+                        <svg width="16" height="16">
+                            <use href="./images/icons.svg#facebook"></use>
+                        </svg>
+                    </a>
+                </div>
+            </div>
+            <div class="footer-sub">
+                <p class="footer-subscribe-text">Subscribe</p>
+                <form>
+                    <input type="text" placeholder="Email" />
+                    <button>Subscribe</button>
+                </form>
+            </div>
         </footer>
     </body>
 </html>
