--- a/index.html
+++ b/index.html
@@ -96,135 +96,166 @@
             </section>
 
             <section class="about section">
-                <ul class="list">
-                    <li>
-                        <div class="about-icon">
-                            <svg width="64" height="64">
-                                <use href="./images/icons.svg#antenna-1"></use>
-                            </svg>
-                        </div>
-                        <h3>Strategy</h3>
-                        <p class="p-dark">Our goal is to identify the business problem to walk away with the perfect and creative solution.</p>
-                    </li>
-                    <li>
-                        <div class="about-icon">
-                            <svg width="64" height="64">
-                                <use href="./images/icons.svg#clock-1"></use>
-                            </svg>
-                        </div>
-                        <h3>Punctuality</h3>
-                        <p class="p-dark">Bring the key message to the brand's audience for the best price within the shortest possible time.</p>
-                    </li>
-                    <li>
-                        <div class="about-icon">
-                            <svg width="64" height="64">
-                                <use href="./images/icons.svg#diagram-1"></use>
-                            </svg>
-                        </div>
-                        <h3>Diligence</h3>
-                        <p class="p-dark">Research and confirm brands that present the strongest digital growth opportunities and minimize risk.</p>
-                    </li>
-                    <li>
-                        <div class="about-icon">
-                            <svg width="64" height="64">
-                                <use href="./images/icons.svg#astronaut-1"></use>
-                            </svg>
-                        </div>
-                        <h3>Technologies</h3>
-                        <p class="p-dark">Design practice focused on digital experiences. We bring forth a deep passion for problem-solving.</p>
-                    </li>
-                </ul>
+                <div class="container">
+                    <ul class="list">
+                        <li class="about-item">
+                            <div class="about-icon">
+                                <svg width="64" height="64">
+                                    <use href="./images/icons.svg#antenna-1"></use>
+                                </svg>
+                            </div>
+                            <h3>Strategy</h3>
+                            <p class="p-dark">Our goal is to identify the business problem to walk away with the perfect and creative solution.</p>
+                        </li>
+                        <li class="about-item">
+                            <div class="about-icon">
+                                <svg width="64" height="64">
+                                    <use href="./images/icons.svg#clock-1"></use>
+                                </svg>
+                            </div>
+                            <h3>Punctuality</h3>
+                            <p class="p-dark">Bring the key message to the brand's audience for the best price within the shortest possible time.</p>
+                        </li>
+                        <li class="about-item">
+                            <div class="about-icon">
+                                <svg width="64" height="64">
+                                    <use href="./images/icons.svg#diagram-1"></use>
+                                </svg>
+                            </div>
+                            <h3>Diligence</h3>
+                            <p class="p-dark">
+                                Research and confirm brands that present the strongest digital growth opportunities and minimize risk.
+                            </p>
+                        </li>
+                        <li class="about-item">
+                            <div class="about-icon">
+                                <svg width="64" height="64">
+                                    <use href="./images/icons.svg#astronaut-1"></use>
+                                </svg>
+                            </div>
+                            <h3>Technologies</h3>
+                            <p class="p-dark">Design practice focused on digital experiences. We bring forth a deep passion for problem-solving.</p>
+                        </li>
+                    </ul>
+                </div>
             </section>
             <section class="section what-we-do">
-                <h2 class="section-title">what are we doing</h2>
-                <ul class="list">
-                    <li>
-                        <img src="images/what-we-do-1.jpg" alt="Computer" />
-                    </li>
-                    <li>
-                        <img src="images/what-we-do-2.jpg" alt="WhatsApp" />
-                    </li>
-                    <li>
-                        <img src="images/what-we-do-3.jpg" alt="Phone " />
-                    </li>
-                </ul>
+                <div class="container">
+                    <h2 class="section-title">what are we doing</h2>
+                    <ul class="list">
+                        <li>
+                            <img src="images/what-we-do-1.jpg" alt="Computer" />
+                        </li>
+                        <li>
+                            <img src="images/what-we-do-2.jpg" alt="WhatsApp" />
+                        </li>
+                        <li>
+                            <img src="images/what-we-do-3.jpg" alt="Phone " />
+                        </li>
+                    </ul>
+                </div>
             </section>
 
             <section class="team section">
-                <h2 class="section-title">Our Team</h2>
-                <ul class="list">
-                    <li>
-                        <img src="images/profile-1.jpg" alt="Mark Guerrero" />
-                        <div class="team-caption">
-                            <h3 class="team-name">Mark Guerrero</h3>
-                            <p class="p-dark">Product Designer</p>
-                            <div class="team-socials">
-                                <a class="team-socials-icon">
-                                    <svg width="16" height="16">
-                                        <use href="./images/icons.svg#instagram-2"></use>
-                                    </svg>
-                                </a>
-                                <a class="team-socials-icon">
-                                    <svg width="16" height="16">
-                                        <use href="./images/icons.svg#twitter-1"></use>
-                                    </svg>
-                                </a>
-                                <a class="team-socials-icon">
-                                    <svg width="16" height="16">
-                                        <use href="./images/icons.svg#linkedin-1"></use>
-                                    </svg>
-                                </a>
-                                <a class="team-socials-icon">
-                                    <svg width="16" height="16">
-                                        <use href="./images/icons.svg#facebook"></use>
-                                    </svg>
-                                </a>
+                <div class="container">
+                    <h2 class="section-title">Our Team</h2>
+                    <ul class="list">
+                        <li class="team-item">
+                            <img src="images/profile-1.jpg" alt="Mark Guerrero" />
+                            <div class="team-caption">
+                                <h3 class="team-name">Mark Guerrero</h3>
+                                <p class="p-dark">Product Designer</p>
+                                <div class="team-socials">
+                                    <a class="team-socials-icon">
+                                        <svg width="16" height="16">
+                                            <use href="./images/icons.svg#instagram-2"></use>
+                                        </svg>
+                                    </a>
+                                    <a class="team-socials-icon">
+                                        <svg width="16" height="16">
+                                            <use href="./images/icons.svg#twitter-1"></use>
+                                        </svg>
+                                    </a>
+                                    <a class="team-socials-icon">
+                                        <svg width="16" height="16">
+                                            <use href="./images/icons.svg#linkedin-1"></use>
+                                        </svg>
+                                    </a>
+                                    <a class="team-socials-icon">
+                                        <svg width="16" height="16">
+                                            <use href="./images/icons.svg#facebook"></use>
+                                        </svg>
+                                    </a>
+                                </div>
                             </div>
-                        </div>
-                    </li>
-                    <li>
-                        <img src="images/profile-2.jpg" alt="Tom Ford" />
-                        <h3 class="team-name">Tom Ford</h3>
-                        <p class="p-dark">Frontend Developer</p>
-                    </li>
-                    <li>
-                        <img src="images/profile-3.jpg" alt="Camila Garcia" />
-                        <h3 class="team-name">Camila Garcia</h3>
-                        <p class="p-dark">Marketing</p>
-                    </li>
-                    <li>
-                        <img src="images/profile-4.jpg" alt="Daniel Wilson" />
-                        <h3>Daniel Wilson</h3>
-                        <p class="p-dark">UI Designer</p>
-                    </li>
-                </ul>
+                        </li>
+                        <li class="team-item">
+                            <img src="images/profile-2.jpg" alt="Tom Ford" />
+                            <h3 class="team-name">Tom Ford</h3>
+                            <p class="p-dark">Frontend Developer</p>
+                        </li>
+                        <li class="team-item">
+                            <img src="images/profile-3.jpg" alt="Camila Garcia" />
+                            <h3 class="team-name">Camila Garcia</h3>
+                            <p class="p-dark">Marketing</p>
+                        </li>
+                        <li class="team-item">
+                            <img src="images/profile-4.jpg" alt="Daniel Wilson" />
+                            <h3>Daniel Wilson</h3>
+                            <p class="p-dark">UI Designer</p>
+                        </li>
+                    </ul>
+                </div>
             </section>
 
-            <section class="customers">
-                <h2 class="section-title">Customers</h2>
-                <ul class="list">
-                    <li class="customer-icon">
-                        <a href="#">
-                            <svg width="104" height="56">
-                                <use href="./images/icons.svg#Logo-6"></use>
-                            </svg>
-                        </a>
-                    </li>
-                    <li class="customer-icon">
-                        <a href="#">
-                            <svg width="104" height="56">
-                                <use href="./images/icons.svg#Logo-4"></use>
-                            </svg>
-                        </a>
-                    </li>
-                    <li class="customer-icon">
-                        <a href="#">
-                            <svg width="104" height="56">
-                                <use href="./images/icons.svg#Logo-5"></use>
-                            </svg>
-                        </a>
-                    </li>
-                </ul>
+            <section class="customers section">
+                <div class="container">
+                    <h2 class="section-title">Customers</h2>
+                    <ul class="list">
+                        <li class="customer-icon">
+                            <a href="#">
+                                <svg width="104" height="56">
+                                    <use href="./images/icons.svg#Logo-6"></use>
+                                </svg>
+                            </a>
+                        </li>
+                        <li class="customer-icon">
+                            <a href="#">
+                                <svg width="104" height="56">
+                                    <use href="./images/icons.svg#Logo-4"></use>
+                                </svg>
+                            </a>
+                        </li>
+                        <li class="customer-icon">
+                            <a href="#">
+                                <svg width="104" height="56">
+                                    <use href="./images/icons.svg#Logo-1"></use>
+                                </svg>
+                            </a>
+                        </li>
+                        <li class="customer-icon">
+                            <a href="#">
+                                <svg width="104" height="56">
+                                    <use href="./images/icons.svg#Logo"></use>
+                                </svg>
+                            </a>
+                        </li>
+                        <li class="customer-icon">
+                            <a href="#">
+                                <svg width="104" height="56">
+                                    <use href="./images/icons.svg#Logo-2"></use>
+                                </svg>
+                            </a>
+                        </li>
+                        <li class="customer-icon">
+                            <a href="#">
+                                <svg width="104" height="56">
+                                    <use href="./images/icons.svg#Logo-5"></use>
+                                </svg>
+                            </a>
+                        </li>
+                    </ul>
+                </div>
             </section>
         </main>
 
